--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "test": "tests"
   },
   "scripts": {
-    "test": "nyc mocha tests",
-    "lint": "eslint src/*",
-    "start": "node index.js"
+    "test": "nyc -r text -e .ts -x \"tests/*.test.ts\" mocha -r ts-node/register tests/*",
+    "lint": "tslint -p .",
+    "start": "npm run tsc && node build/app.js",
+    "dev": "ts-node-dev --respawn --transpileOnly ./app.ts",
+    "tsc": "tsc"
   },
   "keywords": [
     "Xendit"
@@ -17,12 +19,21 @@
   "author": "Bo",
   "license": "ISC",
   "dependencies": {
+    "@types/body-parser": "^1.17.0",
+    "@types/chai": "^4.2.0",
+    "@types/express": "^4.17.0",
+    "@types/helmet": "0.0.43",
+    "@types/mocha": "^5.2.7",
+    "@types/sqlite3": "^3.1.5",
+    "@types/winston": "^2.4.4",
     "body-parser": "^1.19.0",
     "express": "^4.16.4",
+    "helmet": "^3.20.0",
     "sqlite3": "^4.0.6",
     "winston": "^3.2.1"
   },
   "devDependencies": {
+    "chai": "^4.2.0",
     "eslint": "^6.1.0",
     "eslint-config-standard": "^13.0.1",
     "eslint-plugin-import": "^2.18.2",
@@ -30,9 +41,13 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
     "husky": "^3.0.3",
-    "mocha": "^6.1.4",
+    "mocha": "^6.2.0",
     "nyc": "^14.1.1",
-    "supertest": "^4.0.2"
+    "supertest": "^4.0.2",
+    "ts-node": "^8.3.0",
+    "ts-node-dev": "^1.0.0-pre.40",
+    "tslint": "^5.18.0",
+    "typescript": "^3.5.3"
   },
   "husky": {
     "hooks": {
